samples/_failures_safe/1761491116_f38773_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb637ca4.c: In function ‘main’:
./samples/SAFE/__tmp_bb637ca4.c:154:22: error: ‘word’ undeclared (first use in this function); did you mean ‘words’?
  154 |     sort_word_counts(word
      |                      ^~~~
      |                      words
./samples/SAFE/__tmp_bb637ca4.c:154:22: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_bb637ca4.c:154:26: error: expected ‘)’ at end of input
  154 |     sort_word_counts(word
      |                     ~    ^
      |                          )
./samples/SAFE/__tmp_bb637ca4.c:154:5: error: too few arguments to function ‘sort_word_counts’
  154 |     sort_word_counts(word
      |     ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_bb637ca4.c:97:6: note: declared here
   97 | void sort_word_counts(struct WordCount* word_counts, int count) {
      |      ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_bb637ca4.c:154:5: error: expected declaration or statement at end of input
  154 |     sort_word_counts(word
      |     ^~~~~~~~~~~~~~~~
